[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mdplus"
version = "1.0.0"
authors = [
  { name="Valentin Schröter", email="vasc9380@th-wildau.de" },
]
description = "Generator for markdown files."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click-aliases",
    "click",
    "GitPython",
    "inquirerpy",
    "mistletoe",
    "overrides",
    "pandas",
    "py-markdown-table",
    "rich",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iCampus-Wildau/markdown-plus"
Issues = "https://github.com/iCampus-Wildau/markdown-plus/issues"

[project.scripts]
mdplus = "mdplus.cli:execute"
